ecmascript/parser/tests/typescript-errors/tsc/es6/destructuring/destructuringObjectBindingPatternAndAssignment3/input.ts.stderr
error: Expected ,, got ?
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/destructuringObjectBindingPatternAndAssignment3/input.ts:2:7
  |
2 | var {h?} = { h?: 1 };
  |       ^

